[gd_scene load_steps=16 format=3 uid="uid://d0dymr70087q8"]

[ext_resource type="Script" uid="uid://b4gi0reo2agfg" path="res://scripts/player.gd" id="1_v666e"]
[ext_resource type="Script" uid="uid://cm3nhds7ybkkb" path="res://scenes/gui.gd" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://cyfjd4773jfol" path="res://assets/crosshair_grabbing.png" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://81ljda3073o0" path="res://assets/crosshair.png" id="5_qlg0r"]
[ext_resource type="Shader" uid="uid://wq4btflo30w7" path="res://scenes/negative.gdshader" id="5_tuyoq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xqg4r"]
radius = 1.0
height = 4.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qlg0r"]
points = PackedVector3Array(-0.25041, -1.06559, -0.961001, 0.0455663, 0.952141, 0.997768, 0.339426, 1.11829, 0.928346, 0.462089, -1.60714, 0.640893, 0.814783, 1.30203, -0.487023, -0.965635, 1.18975, 0.164435, -0.725713, -1.36458, 0.579376, 0.93809, -1.30906, -0.132543, -0.254891, 1.68542, -0.676214, -0.786851, -1.36785, -0.489421, 0.876492, 1.24659, 0.401691, 0.1683, 1.95497, 0.229596, -0.13641, -1.95298, -0.25855, 0.401111, -1.12629, -0.902936, -0.371062, 1.19093, -0.906971, -0.546702, 1.18449, 0.815474, -0.013873, -0.953646, 0.999321, 0.75168, -1.17729, 0.633943, 0.223164, 1.12615, -0.962382, -0.834529, 1.05577, -0.541012, -0.969147, -1.19401, -0.133028, -0.559494, 1.81712, 0.106672, -0.50041, -1.76148, 0.41065, 0.527294, -1.80554, -0.254789, 0.58675, 1.7431, -0.3144, 0.746805, -1.05261, -0.656476, 0.999325, 0.953283, -0.0137771, 0.106212, 1.75002, 0.649411, -0.309093, -1.18174, 0.931782, -0.194551, -1.56465, -0.796341, -0.7753, -0.996346, 0.631302, -0.601378, -1.17603, -0.777827)

[sub_resource type="FogMaterial" id="FogMaterial_20bdx"]
density = 0.0383
emission = Color(0.617493, 0.474562, 0.392049, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce1ts"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_261lf"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqkch"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fjrip"]
shader = ExtResource("5_tuyoq")

[sub_resource type="Curve3D" id="Curve3D_qhqgy"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -10),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxMesh" id="BoxMesh_dqkch"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_v666e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
mesh = SubResource("CapsuleMesh_xqg4r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("ConvexPolygonShape3D_qlg0r")

[node name="FogVolume" type="FogVolume" parent="."]
visible = false
size = Vector3(75, 75, 75)
shape = 0
material = SubResource("FogMaterial_20bdx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("2_qhqgy")

[node name="score" type="RichTextLabel" parent="CanvasLayer/GUI"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 2.0
grow_horizontal = 0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 75
text = "0"
scroll_active = false
horizontal_alignment = 2
vertical_alignment = 1

[node name="obj_speed_text" type="RichTextLabel" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 293.0
offset_right = -33.0
offset_bottom = 353.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]drag power
(CTRL + SCROLL)
[/center]
"
scroll_active = false

[node name="obj_speed_bar" type="ProgressBar" parent="CanvasLayer/GUI"]
custom_minimum_size = Vector2(15, 350)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -33.0
offset_top = 151.0
offset_right = -18.0
offset_bottom = 501.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ce1ts")
theme_override_styles/fill = SubResource("StyleBoxFlat_261lf")
min_value = 4.0
max_value = 25.0
step = 1.0
value = 25.0
fill_mode = 3
show_percentage = false

[node name="gui_cooldown" type="Timer" parent="CanvasLayer/GUI"]
wait_time = 2.0
one_shot = true

[node name="interact_tip_text" type="Label" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 32
text = "press E to pickup"
horizontal_alignment = 1
vertical_alignment = 1

[node name="crosshair_grabbing" type="TextureRect" parent="CanvasLayer/GUI"]
clip_children = 1
clip_contents = true
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -49.5
offset_right = 463.0
offset_bottom = 462.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.19, 0.19)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_dqkch")
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/GUI/crosshair_grabbing"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0
mouse_filter = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_dqkch")
fill_mode = 3
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="crosshair" type="TextureRect" parent="CanvasLayer/GUI/MarginContainer"]
material = SubResource("ShaderMaterial_fjrip")
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_qlg0r")
expand_mode = 3

[node name="camera_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9, 0)

[node name="spring_arm_3d" type="SpringArm3D" parent="camera_pivot"]

[node name="spring_position" type="Node3D" parent="camera_pivot/spring_arm_3d"]

[node name="camera" type="Camera3D" parent="camera_pivot/spring_arm_3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0458374, 0)

[node name="ray_interaction" type="RayCast3D" parent="camera_pivot/spring_arm_3d/camera"]
auto_translate_mode = 1
target_position = Vector3(0, 0, -10)
collision_mask = 3

[node name="Path3D" type="Path3D" parent="camera_pivot/spring_arm_3d/camera/ray_interaction"]
curve = SubResource("Curve3D_qhqgy")

[node name="PathFollow3D" type="PathFollow3D" parent="camera_pivot/spring_arm_3d/camera/ray_interaction/Path3D"]
loop = false

[node name="hand" type="Marker3D" parent="camera_pivot/spring_arm_3d/camera/ray_interaction/Path3D/PathFollow3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.0549999, 0.00255966)

[node name="MeshInstance3D" type="MeshInstance3D" parent="camera_pivot/spring_arm_3d/camera/ray_interaction/Path3D/PathFollow3D/hand"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_dqkch")

[node name="grab_buffer_timer" type="Timer" parent="camera_pivot/spring_arm_3d/camera"]
wait_time = 2.0
one_shot = true

[node name="rotate_to_player_joint" type="Generic6DOFJoint3D" parent="camera_pivot/spring_arm_3d/camera"]
node_a = NodePath("../StaticBody3D")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="camera_pivot/spring_arm_3d/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.50045)

[node name="flashlight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.91644, 0)
light_color = Color(0.79903, 0.707115, 0.61987, 1)
light_energy = 16.0
light_indirect_energy = 1.84
light_volumetric_fog_energy = 6.59
light_size = 1.0
spot_range = 11.065
spot_angle = 55.21

[node name="no_fly_ray" type="RayCast3D" parent="."]
target_position = Vector3(0, -6, 0)

[node name="RigidBody3D" type="RigidBody3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
visible = false
shape = SubResource("CapsuleShape3D_qhqgy")

[connection signal="timeout" from="CanvasLayer/GUI/gui_cooldown" to="." method="_on_gui_cooldown_timeout"]
[connection signal="timeout" from="camera_pivot/spring_arm_3d/camera/grab_buffer_timer" to="." method="_on_grab_buffer_timer_timeout"]
